# lawscan

./: README.md
ecfr-analytics/: .gcloudignore  .gitignore  DEPLOY.md  DEPLOYMENT.md  Dockerfile  FULL_CFR_INGESTION.md  LOCAL_VS_CLOUD.md  PARALLEL_INGESTION.md  README.md  deploy-cloud-run.sh  test_cloud_function.py  test_discovery.py  test_full_cfr.py  test_local_simple.py  test_mock_parallel.py
ecfr-analytics/ai_service/: main.py  requirements.txt
ecfr-analytics/api/: .env.example  Dockerfile  main.py  nginx.conf  pyproject.toml  requirements.txt  start.sh
ecfr-analytics/bulk-ingestion/: README.md
ecfr-analytics/bulk-ingestion/scripts/: download_cfr_xml.py  fix_all_part_issues.py  fix_part_numbers.py  fix_part_numbers_advanced.py  xml_to_bigquery.py  xml_to_plaintext.py
ecfr-analytics/cloud_functions/ecfr_ingest_part/: .env.yaml  main.py  requirements.txt
ecfr-analytics/infra/: bigquery_schema.sql  views.sql
ecfr-analytics/ingestion/: .env.example  ecfr_ingest.py  pyproject.toml  requirements.txt
ecfr-analytics/scripts/: deploy_parallel_ingestion.py  full_cfr_ingestion.py  inventory.py  load_ndjson.sh  local_parallel_ingestion.py  run_parallel_ingestion.sh  verify_ecfr.py
ecfr-analytics/ui/: app.js  index.html
ecfr-analyzer/scripts/: ecfr_fetch.py  ecfr_ingest_bq.py
