[project]
name = "ecfr-analytics-ingestion"
version = "0.1.0"
description = "eCFR data ingestion tools"
requires-python = ">=3.10"
dependencies = [
    "requests==2.32.3",
    "python-dateutil==2.9.0.post0",
    "tqdm==4.66.4",
    "google-cloud-bigquery==3.25.0",
    "python-dotenv==1.0.1",
    "lxml==5.3.0",
]

[tool.uv]
dev-dependencies = []